--- a/projects.html
+++ b/projects.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Saif's Portfolio - About Me
+        Saif's Projects
     </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_projects.css">
 </head>
 <body>
     <header>
         <h1>
-            Portfolio
+            Saif Bhuiya
         </h1>
         <nav>
             <a href="index.html">About Me</a>
@@ -20,14 +20,16 @@
             <a href="games.html">Games</a>
             <a href="music.html">Music</a>
         </nav>
+
     </header>
     <main>
         <section>
-            <h3>About Me</h3>
-            <p1>I am Saif Bhuiya. </p1>
-            <p>I am a software engineer, game developer, music producer, GFX designer & teacher 
-            </p>
-        </section>
+            <h2>Hello! I am Saif Bhuiya. </h2>
+            <p>I am a Software Engineer from Bangladesh. I did my Bachelors in Computer Science and Engineering from North South University, Bangladesh. My current CGPA: 3.74. My Projects:</p>
+            <p1> <a href="https://github.com/SaifBhuiya/CSE299">OPTICAL MARK RECOGNITION (OMR) from pictures taken by a phone</a></p1>
+            <p2> <a href="https://github.com/SaifBhuiya/Mediapipe">Augmented Reality based Clothing Trial App</a></p2>
+            <p3> <a href="index.html">This Website</a></p3>
+</section>
     </main>
     <footer>
         <p>© 2024 Saif Bhuiya. All rights reserved.</p>
