--- a/music.html
+++ b/music.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Saif's Portfolio - About Me
+        Saif's Music
     </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_music.css">
 </head>
 <body>
     <header>
         <h1>
-            Portfolio
+            MixedApe
         </h1>
         <nav>
             <a href="index.html">About Me</a>
@@ -20,12 +20,23 @@
             <a href="games.html">Games</a>
             <a href="music.html">Music</a>
         </nav>
+
     </header>
     <main>
         <section>
-            <h3>About Me</h3>
-            <p1>I am Saif Bhuiya. </p1>
-            <p>I am a software engineer, game developer, music producer, GFX designer & teacher 
+            <h2>Hello! I am MixedApe. </h2>
+            <p>
+                I am a music producer from Bangladesh. I make EDM music.
+            </p>
+            <p>
+                <iframe width="100%" height="166" style="transform: scale(.80);" scrolling="no" frameborder="yes" allow="autoplay"
+                        src="https://w.soundcloud.com/player?url=https%3A//api.soundcloud.com/tracks/1975141611&amp;color=%23246b67">
+                </iframe>
+                <iframe width="100%" height="166" style="transform: scale(.80);" scrolling="no" frameborder="yes" allow="autoplay"
+                        src="https://w.soundcloud.com/player?url=https%3A//api.soundcloud.com/tracks/1702643478&amp;color=%2340A578">
+                </iframe>
+                
+
             </p>
         </section>
     </main>
@@ -44,8 +55,6 @@
             <a href="https://soundcloud.com/user-11502799-336281830" target="_blank">Soundcloud</a>
         </p>
     </footer>
-
-
 
 </body>
 </html>
