--- a/games.html
+++ b/games.html
@@ -10,54 +10,57 @@
     <link rel="stylesheet" href="styles_games.css">
 </head>
 <body>
-    <header>
-        <h1>
-            Dan5626
-        </h1>
-        <nav>
-            <a href="index.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="games.html">Games</a>
-            <a href="music.html">Music</a>
-        </nav>
+    <div class="page-wrapper">
+        <header>
+            <h1>
+                Dan5626
+            </h1>
+            <nav>
+                <a href="index.html">About Me</a>
+                <a href="projects.html">Projects</a>
+                <a href="games.html">Games</a>
+                <a href="music.html">Music</a>
+            </nav>
 
-    </header>
-    <main>
-        <section>
-            <h2>Hello! I am Dan5626. </h2>
-            <p>I am a Game Developer from Bangladesh. Check out my latest Game "The Young King on itch"</p>
-        </section>
-        <section1>
-            <iframe frameborder="1" src="https://itch.io/embed/2909337?linkback=true&amp;
+        </header>
+        <main>
+            <section>
+                <h2>Hello! I am Dan5626. </h2>
+                <p>I am a Game Developer from Bangladesh.</p>
+            </section>
+            <section1>
+                <iframe frameborder="1" src="https://itch.io/embed/2909337?linkback=true&amp;
                     border_width=5&amp;bg_color=000000&amp;fg_color=ff8711&amp;link_color=8200c4&amp;border_color=b034ff" width="560" height="175">
-                <a href="https://batmenzdw.itch.io/space-forge">Space Forge by BatmenzDW, Vinny Games (Pugtooth), Dan5626</a>
-            </iframe>
-            <iframe frameborder="1" src="https://itch.io/embed/3044550?linkback=true&amp;
+                    <a href="https://batmenzdw.itch.io/space-forge">Space Forge by BatmenzDW, Vinny Games (Pugtooth), Dan5626</a>
+                </iframe>
+                <iframe frameborder="1" src="https://itch.io/embed/3044550?linkback=true&amp;
                     border_width=5&amp;bg_color=f5e5c2&amp;fg_color=d87645&amp;link_color=7469ad&amp;border_color=a463ab"
-                    width="560" height="175">
-                <a href="https://dan5626.itch.io/young-king">The Young King by Dan5626</a>
-            </iframe>
-            <iframe frameborder="1" src="https://itch.io/embed/2973622?border_width=5&amp;bg_color=46a682&amp;fg_color=1b2a67&amp;link_color=1b2a67&amp;border_color=172924"
-                    width="560" height="175"><a href="https://dan5626.itch.io/that-stormy-night">That Stormy Night by Dan5626, NickusD</a></iframe>
-        </section1>
+                        width="560" height="175">
+                    <a href="https://dan5626.itch.io/young-king">The Young King by Dan5626</a>
+                </iframe>
+                <iframe frameborder="1" src="https://itch.io/embed/2973622?border_width=5&amp;bg_color=46a682&amp;fg_color=1b2a67&amp;link_color=1b2a67&amp;border_color=172924"
+                        width="560" height="175">
+                    <a href="https://dan5626.itch.io/that-stormy-night">That Stormy Night by Dan5626, NickusD</a>
+                </iframe>
+            </section1>
 
-    </main>
-    <footer>
-        <p>© 2024 Saif Bhuiya. All rights reserved.</p>
-        <p>
-            <a href="index.html">About</a> |
-            <a href="contact.html">Contact</a> |
-            <a href="privacy.html">Privacy Policy</a>
-        </p>
-        <p>
-            Follow me on:
+        </main>
+        <footer>
+            <p>© 2024 Saif Bhuiya. All rights reserved.</p>
+            <p>
+                <a href="index.html">About</a> |
+                <a href="contact.html">Contact</a> |
+                <a href="privacy.html">Privacy Policy</a>
+            </p>
+            <p>
+                Follow me on:
 
-            <a href="https://github.com/SaifBhuiya" target="_blank">GitHub</a> |
-            <a href="https://itch.io/profile/dan5626" target="_blank">Itch.io</a> |
-            <a href="https://soundcloud.com/user-11502799-336281830" target="_blank">Soundcloud</a>
-        </p>
-    </footer>
+                <a href="https://github.com/SaifBhuiya" target="_blank">GitHub</a> |
+                <a href="https://itch.io/profile/dan5626" target="_blank">Itch.io</a> |
+                <a href="https://soundcloud.com/user-11502799-336281830" target="_blank">Soundcloud</a>
+            </p>
+        </footer>
 
-
+    </div>
 </body>
 </html>
