--- a/index.html
+++ b/index.html
@@ -10,42 +10,49 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>
-            Portfolio
-        </h1>
-        <nav>
-            <a href="index.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="games.html">Games</a>
-            <a href="music.html">Music</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h3>About Me</h3>
-            <p1>I am Saif Bhuiya. </p1>
-            <p>I am a software engineer, game developer, music producer, GFX designer & teacher 
+    <div class="page-wrapper">
+        <header>
+            <h1>
+                Portfolio
+            </h1>
+            <nav>
+                <a href="index.html">About Me</a>
+                <a href="projects.html">Projects</a>
+                <a href="games.html">Games</a>
+                <a href="music.html">Music</a>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h3>About Me</h3>
+                <p1>I am Saif Bhuiya. </p1>
+                <p2>
+
+
+                    <div1 class="animated-text">
+                        I am a <span></span>
+                    </div1>
+                </p2>   
+                
+            </section>
+        </main>
+        <footer>
+            <p>© 2024 Saif Bhuiya. All rights reserved.</p>
+            <p>
+                <a href="index.html">About</a> |
+                <a href="contact.html">Contact</a> |
+                <a href="privacy.html">Privacy Policy</a>
             </p>
-        </section>
-    </main>
-    <footer>
-        <p>© 2024 Saif Bhuiya. All rights reserved.</p>
-        <p>
-            <a href="index.html">About</a> |
-            <a href="contact.html">Contact</a> |
-            <a href="privacy.html">Privacy Policy</a>
-        </p>
-        <p>
-            Follow me on:
+            <p>
+                Follow me on:
 
-            <a href="https://github.com/SaifBhuiya" target="_blank">GitHub</a> |
-            <a href="https://itch.io/profile/dan5626" target="_blank">Itch.io</a> |
-            <a href="https://soundcloud.com/user-11502799-336281830" target="_blank">Soundcloud</a>
-        </p>
-    </footer>
+                <a href="https://github.com/SaifBhuiya" target="_blank">GitHub</a> |
+                <a href="https://itch.io/profile/dan5626" target="_blank">Itch.io</a> |
+                <a href="https://soundcloud.com/user-11502799-336281830" target="_blank">Soundcloud</a>
+            </p>
+        </footer>
 
 
-
+    </div>
 </body>
 </html>
