--- a/projects.html
+++ b/projects.html
@@ -10,43 +10,46 @@
     <link rel="stylesheet" href="styles_projects.css">
 </head>
 <body>
-    <header>
-        <h1>
-            Saif Bhuiya
-        </h1>
-        <nav>
-            <a href="index.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="games.html">Games</a>
-            <a href="music.html">Music</a>
-        </nav>
+    <div class="page-wrapper">
+        <header>
+            <h1>
+                Saif Bhuiya
+            </h1>
+            <nav>
+                <a href="index.html">About Me</a>
+                <a href="projects.html">Projects</a>
+                <a href="games.html">Games</a>
+                <a href="music.html">Music</a>
+            </nav>
 
-    </header>
-    <main>
-        <section>
-            <h2>Hello! I am Saif Bhuiya. </h2>
-            <p>I am a Software Engineer from Bangladesh. I did my Bachelors in Computer Science and Engineering from North South University, Bangladesh. My current CGPA: 3.74. My Projects:</p>
-            <p1> <a href="https://github.com/SaifBhuiya/CSE299">OPTICAL MARK RECOGNITION (OMR) from pictures taken by a phone</a></p1>
-            <p2> <a href="https://github.com/SaifBhuiya/Mediapipe">Augmented Reality based Clothing Trial App</a></p2>
-            <p3> <a href="index.html">This Website</a></p3>
-</section>
-    </main>
-    <footer>
-        <p>© 2024 Saif Bhuiya. All rights reserved.</p>
-        <p>
-            <a href="index.html">About</a> |
-            <a href="contact.html">Contact</a> |
-            <a href="privacy.html">Privacy Policy</a>
-        </p>
-        <p>
-            Follow me on:
+        </header>
+        <main>
+            <section>
+                <h2>Hello! I am Saif Bhuiya. </h2>
+                <p>I am a Software Engineer from Bangladesh. <br>I did my Bachelors in Computer Science and Engineering from North South University, Bangladesh. <br>My current CGPA: 3.74.<br> My Projects:</p>
+                <p1>
+                    <br> <a href="https://github.com/SaifBhuiya/CSE299">Optical Mark Recognition (OMR) from pictures taken by a phone</a>
+                    <br> <a href="https://github.com/SaifBhuiya/Mediapipe">Augmented Reality based Clothing Trial App</a>
+                    <br> <a href="index.html">This Website</a>
+                </p1>
+            </section>
+        </main>
+        <footer>
+            <p>© 2024 Saif Bhuiya. All rights reserved.</p>
+            <p>
+                <a href="index.html">About</a> |
+                <a href="contact.html">Contact</a> |
+                <a href="privacy.html">Privacy Policy</a>
+            </p>
+            <p>
+                Follow me on:
 
-            <a href="https://github.com/SaifBhuiya" target="_blank">GitHub</a> |
-            <a href="https://itch.io/profile/dan5626" target="_blank">Itch.io</a> |
-            <a href="https://soundcloud.com/user-11502799-336281830" target="_blank">Soundcloud</a>
-        </p>
-    </footer>
-
+                <a href="https://github.com/SaifBhuiya" target="_blank">GitHub</a> |
+                <a href="https://itch.io/profile/dan5626" target="_blank">Itch.io</a> |
+                <a href="https://soundcloud.com/user-11502799-336281830" target="_blank">Soundcloud</a>
+            </p>
+        </footer>
+    </div>
 
 
 </body>
